--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
   </div>
 </div>
 <!-- container -->
- <div id="rmpPlayer"></div> <div class="marquee yellow"><span> <i class=""style="font-size:45pt" aria-hidden="true"></i></span> <marquee scrollamount="5" direction="left" onmouseover="stop()" onmouseout="start()"><font color="#2eff00"> 📢📢 বিশেষ ঘোষণা  ***সকাল ৭টায়  Brazil vs Ecuador খেলাটি সরাসরি "Thalna Online" চ্যানেলে দেখানো হবে। *** </marquee> </div> 
+ <div id="rmpPlayer"></div> <div class="marquee yellow"><span> <i class=""style="font-size:45pt" aria-hidden="true"></i></span> <marquee scrollamount="5" direction="left" onmouseover="stop()" onmouseout="start()"><font color="#2eff00"><h2></h2> 📢📢 বিশেষ ঘোষণা  ***সকাল ৭টায়  Brazil vs Ecuador খেলাটি সরাসরি "Thalna Online" চ্যানেলে দেখানো হবে। *** </marquee> </div> 
 	<div id="rmpPlayer"></div> <div class="marquee yellow"><span> <i class=""style="font-size:45pt" aria-hidden="true"></i></span> <marquee scrollamount="5" direction="left" onmouseover="stop()" onmouseout="start()"> সবাই join দিন, এবং আপনাদের সুবিধা অসুবিধা গুলো বলুন। 📢 যেকোনো সময় আমার সাথে যোগাযোগ করতে চাইলে ফেসবুকে আমার সাথে add হতে চাইলে রিকোয়েস্ট দিন। </marquee> </div>
 	
 		<!-- container --> 
